# goit-web-hw-06

./: main.py  pyproject.toml  select.py
queries/: query_02.sql  query_03.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
